--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
