--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_ID="176883294124-t0chpogbgihd3pthjuhim21uvp10jdvj.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRETE="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"
+GOOGLE_CLIENT_SECRET="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"
 MONGODB_URI="mongodb+srv://shoaibhossain24:4LDSWB4s9RyzC65z@prompt-ai.c3h6bzj.mongodb.net/?retryWrites=true&w=majority"
 
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
-NEXTAUTH_SECRETE="pfRpFhTl7qGP4ZLAPAqK+Z6257mvxtHSMBtCstL/4Zc="
+NEXTAUTH_SECRET="pfRpFhTl7qGP4ZLAPAqK+Z6257mvxtHSMBtCstL/4Zc="
